2007-08-12  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml: completed list of supported revision control
	systems.

2007-08-12  Frederic Peters  <fpeters@0d.be>

	* README: fixed instruction about building JhBuild.

2007-08-12  Frederic Peters  <fpeters@0d.be>

	* AUTHORS, Makefile.am, autogen.sh, configure.ac, doc/Makefile.am,
	doc/C/jhbuild.xml, doc/jhbuild.omf.in, doc/jhbuild.xml: added minimal
	autotools infrastucture and moved documentation to use gnome-doc-utils.

2007-08-11  Fernando Herrera  <fherrera@onirica.com>

	* modulesets/gnome-external-deps-2.20.modules: Update
	icon-naming-utils to 0.8.2 required by tango icons.

2007-08-10  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.20.modules: bumped shared-mime-info
	to 0.22, as mentioned in ExternalDependencies and needed by totem.

2007-08-08  Mark McLoughlin  <markmc@redhat.com>

	* jhbuild/versioncontrol/hg.py: change previous patch
	to use single quotes like the rest of the code
	
2007-08-08  Mark McLoughlin  <markmc@redhat.com>

	* jhbuild/versioncontrol/hg.py: explicitly support
	ssh:// URIs since urlparse.urljoin() doesn't. See
	bug #464641
	
2007-08-03  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-external-deps-2.20.modules:
	* modulesets/gnome-suites-2.20.modules: move rarian to
	gnome-external-deps-2.20.modules

2007-08-01  Frederic Peters  <fpeters@0d.be>

	* doc/jhbuild.xml: added minor documentation fixes by C.J.
	Adams-Collier (closes: #462495)

2007-07-31  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* jhbuild/defaults.jhbuildrc: Add the default program for CVS.
	Fixes bug #462328.

2007-07-31  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.20.modules: updated rarian to 0.5.6.

2007-07-31  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	reviewed by: Frederic Peters <fpeters@0d.be>

	* ChangeLog:
	* jhbuild/config.py:
	* jhbuild/versioncontrol/cvs.py (CVSRepository.__init__,
	  CVSRepository.branch):