@@ -1,5 +1,9 @@
 2007-08-12  Frederic Peters  <fpeters@0d.be>
 
+	* doc/C/jhbuild.xml: updated download and installation instructions.
+
+2007-08-12  Frederic Peters  <fpeters@0d.be>
+
 	* doc/C/jhbuild.xml: completed list of supported revision control
 	systems.
 
